tests/ui/lint/snapshots/wildcard_in_or_patterns_variant.snap
---
source: tests/ui/lint/mod.rs
---
  ● Wildcard in or-pattern
   ╭─[test.lis:4:5]
 3 │   match o {
 4 │     Some(0) | _ => 1,
   ·     ─────┬─────
   ·          ╰── can be just `_`
 5 │   }
   ╰────
  help: The `_` alternative already matches everything. Replace the whole pattern with `_` · code: [lint.wildcard_in_or_patterns]
