tests/ui/lint/snapshots/written_but_not_read_in_match.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Variable assigned but never read
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let mut status = "init"
   ·           ───┬──
   ·              ╰── `status` is assigned but never read
 4 │   let opt: Option<int> = None
   ╰────
  help: Read the variable after assigning it, or explicitly discard it with `let _ = ...` · code: [lint.assigned_but_never_read]
