tests/ui/lint/snapshots/written_but_not_read_simple.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Variable assigned but never read
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let mut x = 0
   ·           ┬
   ·           ╰── `x` is assigned but never read
 4 │   x = 42
   ╰────
  help: Read the variable after assigning it, or explicitly discard it with `let _ = ...` · code: [lint.assigned_but_never_read]
